# Hawk

./: Cargo.toml  Makefile  README.md  techstack.md  techstack.yml
.github/workflows/: build.yml
src/: main.rs
src/cmd/: build.rs  check.rs  init.rs  license.rs  release.rs
src/core/: func.rs  mod.rs  obj.rs
src/io/: dir.rs  file.rs
src/module/: git.rs
src/tcp/: tcp.rs
src/util/: README.md  environ.rs  io.rs
