[package]
name = "seal"
version = "0.1.0"
authors = ["Clivern <hello@clivern.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/spacewalkio/seal"
repository = "https://github.com/spacewalkio/seal"
categories = ["command-line-utilities"]
keywords = ["clivern", "seal"]
description = "High Quality Rust Libraries"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
