[package]
name = "hawk_rs"
version = "0.0.1"
authors = ["Clivern <hello@clivern.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/Clivern/hawk_rs"
repository = "https://github.com/Clivern/hawk_rs"
categories = ["command-line-utilities"]
keywords = ["clivern", "hawk_rs"]
description = "Release Rust projects easily!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"
clap = "2.33.3"
